<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpt_foxy</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for GPT interaction.</description>
  <maintainer email="bborang3505@gmail.com">geuny</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>google_cloud_speech</exec_depend>
  <exec_depend>google_cloud_texttospeech</exec_depend>
  <exec_depend>openai</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
